Fix sticky nav by wrapping the whole content in div

--- a/styles/style.css
+++ b/styles/style.css
@@ -444,3 +444,9 @@ footer {
     height: 20rem;
   }
 }
+
+@media screen and (max-width: 360px) {
+  #order-form {
+    border: none;
+  }
+}
